# generation_synthetic

./: .gitignore  README.md  debug_fragment_template_registration.py  debug_run.py  render_single_image.py  run.sh  validate_bop.py  validate_bop.sh
blendforge/: pyproject.toml
blendforge/src/blendforge/blender_runtime/: ActiveStereoSceneUtility.py  CustomBopWriterUtility.py  CustomFractureUtills.py  CustomLightSetting.py  CustomLoadMesh.py  CustomMaterial.py  DepthNoiseModel.py  ImageProcessing.py  YoloWriterUtility.py  __init__.py  utils.py
blendforge/src/blendforge/blender_runtime/camera/: ActiveStereoBranchRuntime.py  ActiveStereoProjectorRuntime.py  CustomCameraUtility.py  ProjectorPatternUtility.py  RealsenseProfileLoader.py  RealsenseProjectorUtility.py
blendforge/src/blendforge/blender_runtime/stereo/: ActiveStereoIRUtility.py  DepthAlignment.py  FrameSeries.py  MatcherConfigUtility.py  StereoMatching.py  StereoPipline.py  StereoRectify.py
blendforge/src/blendforge/blender_runtime/stereo/filters/: DepthFiltering.py  DisparityFiltering.py
blendforge/src/blendforge/blender_runtime/stereo/masks/: LrCheck.py  OverlapMask.py
blendforge/src/blendforge/blender_runtime/writer/: CustomBopShapeWriterUtility.py  CustomBopStereoWriterUtility.py  CustomGraspNetWriterUtility.py  FragmentRegistrationWriter.py  LolWriterUtility.py  RGBDCOCOWriter.py  RGBDStereoCOCOWriter.py
blendforge/src/blendforge/debug_blender_runtime/: EvalDepth.py  ImagesWriterUtility.py
blendforge/src/blendforge/host/: FiletoDict.py
runers/: run_bop_1gpu.py  run_bop_lol.py  run_bop_mult.py  (+8 more)
(+67 files in other folders)
