[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blendforge"
version = "0.1.0"
description = "Core utilities for BlenderProc/bpy synthetic dataset generation"
requires-python = ">=3.10"
authors = [
  { name = "Nikita Kulikov" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
